[package]
name = "xorlist-rs"
version = "0.1.1"
edition = "2024"
description = "A doubly-linked XOR list"
repository = "https://github.com/KiChjang/xorlist-rs"
documentation = "https://docs.rs/xorlist-rs"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["xor", "doubly", "linked", "list", "linked-list"]
categories = ["data-structures"]

rust-version = "1.96"

[dependencies]
